latest demo python

--- a/get-running-13-tev-python-code.ipynb
+++ b/get-running-13-tev-python-code.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<CENTER><img src=\"http://localhost:8888/notebooks/demos-framework-software-notebooks/images/opendata-top-transblack.png\" style=\"width:30%\"></CENTER>"
+    "<CENTER><img src=\"http://opendata.atlas.cern/DataAndTools/pictures/ATLASOD.gif\" style=\"width:50%\"></CENTER>"
    ]
   },
   {
@@ -55,7 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Don Aug  1 14:36:02 CEST 2019\n",
+      "Sun Aug  4 21:50:49 UTC 2019\n",
       "\n"
      ]
     }
@@ -90,7 +90,7 @@
     {
      "data": {
       "text/plain": [
-       "256"
+       "0"
       ]
      },
      "execution_count": 3,
@@ -99,9 +99,8 @@
     }
    ],
    "source": [
-    "##\n",
     "command1 = 'mkdir python-13tev'\n",
-    "os.system(command1)\n"
+    "os.system(command1)"
    ]
   },
   {
@@ -122,14 +121,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 124K\n",
-      "-rw-r--r-- 1 summerstudent users  125 Jul 22 11:07 README.md\n",
-      "-rw------- 1 summerstudent users 9.6K Jul 22 11:26 get-running-8-tev-code-cpp.ipynb\n",
-      "-rw-r--r-- 1 summerstudent users  64K Jul 22 11:50 get-running-13-tev-cpp-code.ipynb\n",
-      "-rw-r--r-- 1 summerstudent users  18K Jul 31 20:36 get-running-8-tev-code-python.ipynb\n",
-      "drwxr-xr-x 2 summerstudent users 4.0K Jul 31 22:37 images\n",
-      "drwxr-xr-x 3 summerstudent users 4.0K Aug  1 14:22 python-13tev\n",
-      "-rw-r--r-- 1 summerstudent users  14K Aug  1 14:34 get-running-13-tev-python-code.ipynb\n",
+      "total 120K\n",
+      "-rw-r--r--. 1 main main  12K Aug  3 10:00 nbviewer-get-running-13-tev-python.ipynb\n",
+      "-rw-r--r--. 1 main main  72K Aug  3 10:00 ATLAS_OpenData_01-python_Hyy_channel_analysis_example.ipynb\n",
+      "-rw-r--r--. 1 main main  14K Aug  4 21:49 get-running-13-tev-python-code.ipynb\n",
+      "drwxr-xr-x. 2 main main 4.0K Aug  4 21:50 python-13tev\n",
       "\n"
      ]
     }
@@ -148,12 +144,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/main/notebooks/notebooks/atlas\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "myCmd = os.popen('pwd').read()\n",
     "print(myCmd)"
@@ -168,13 +173,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "##\n",
     "os.chdir(\"python-13tev/\")"
    ]
   },
@@ -187,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -196,7 +200,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/student/demos-framework-software-notebooks/python-13tev\n",
+      "/home/main/notebooks/notebooks/atlas/python-13tev\n",
       "\n"
      ]
     }
@@ -215,13 +219,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "##\n",
     "command2 = 'git clone https://gitlab.cern.ch/yixin/atlas-outreach-cpp-framework-13tev.git'\n",
     "os.system(command2)"
    ]
@@ -241,7 +255,6 @@
    },
    "outputs": [],
    "source": [
-    "##\n",
     "os.chdir(\"atlas-outreach-cpp-framework-13tev/Beta/\")"
    ]
   },
@@ -263,7 +276,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/student/demos-framework-software-notebooks/python-13tev/atlas-outreach-cpp-framework-13tev/Beta\n",
+      "/home/main/notebooks/notebooks/atlas/python-13tev/atlas-outreach-cpp-framework-13tev/Beta\n",
       "\n"
      ]
     }
@@ -284,7 +297,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Don Aug  1 14:37:35 CEST 2019\n",
+      "Sun Aug  4 21:50:52 UTC 2019\n",
       "\n"
      ]
     }
@@ -303,77 +316,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "##\n",
     "#command3 = 'wget -c http://opendata.atlas.cern/release/samples/2019/GamGam/ATLAS-open-data-13TeV-2019-GamGam.zip'\n",
     "#os.system(command3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "#myCmd = os.popen('date').read()\n",
-    "#print(myCmd)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "##\n",
     "#command4 = 'unzip ATLAS-open-data-13TeV-2019-GamGam.zip'\n",
     "#os.system(command4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "#myCmd = os.popen('date').read()\n",
-    "#print(myCmd)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "##\n",
     "#command5 = 'rm -rf ATLAS-open-data-13TeV-2019-GamGam.zip'\n",
     "#os.system(command5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "#myCmd = os.popen('date').read()\n",
-    "#print(myCmd)"
+    "#os.chdir(\"..\")"
    ]
   },
   {
@@ -385,19 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "##\n",
-    "#os.chdir(\"..\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -406,7 +379,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/student/demos-framework-software-notebooks/python-13tev/atlas-outreach-cpp-framework-13tev/Beta\n",
+      "/home/main/notebooks/notebooks/atlas/python-13tev/atlas-outreach-cpp-framework-13tev/Beta\n",
       "\n"
      ]
     }
@@ -425,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -434,18 +407,16 @@
     {
      "data": {
       "text/plain": [
-       "32512"
+       "0"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "##\n",
-    "command6 = './welcome1.sh'   #if you run the code for the first time \n",
-    "#command6 = './welcome0.sh' #if you want to remove the exist files\n",
+    "command6 = 'mkdir Analysis/HyyAnalysis/Output_HyyAnalysis' \n",
     "os.system(command6)"
    ]
   },
@@ -458,13 +429,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "os.chdir(\"Analysis/HyyAnalysis/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/main/notebooks/notebooks/atlas/python-13tev/atlas-outreach-cpp-framework-13tev/Beta/Analysis/HyyAnalysis\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "myCmd = os.popen('pwd').read()\n",
+    "print(myCmd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 76K\n",
+      "-rwxr-xr-x. 1 main main  347 Aug  4 21:50 run.sh\n",
+      "-rwxr-xr-x. 1 main main  271 Aug  4 21:50 run0.sh\n",
+      "-rw-r--r--. 1 main main 1.4K Aug  4 21:50 main_HyyAnalysis.C\n",
+      "-rw-r--r--. 1 main main 1.5K Aug  4 21:50 HyyAnalysisHistograms.h\n",
+      "-rw-r--r--. 1 main main  16K Aug  4 21:50 HyyAnalysis.h\n",
+      "-rw-r--r--. 1 main main 5.9K Aug  4 21:50 HyyAnalysis.C\n",
+      "lrwxrwxrwx. 1 main main   11 Aug  4 21:50 clean.sh -> ../clean.sh\n",
+      "drwxr-xr-x. 2 main main 4.0K Aug  4 21:50 Output_HyyAnalysis\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "myCmd = os.popen('ls -lhrt').read()\n",
+    "print(myCmd)"
    ]
   },
   {
@@ -476,24 +497,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "##\n",
-    "command7 = './run0.sh'\n",
+    "command7 = './run0.sh 0'\n",
     "os.system(command7)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sun Aug  4 21:53:27 UTC 2019\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "myCmd = os.popen('date').read()\n",
     "print(myCmd)"
@@ -508,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -519,16 +559,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/main/notebooks/notebooks/atlas/python-13tev/atlas-outreach-cpp-framework-13tev/Beta/Plotting_Hyy\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "##\n",
-    "##  it will be the internal ROOT commands to plot\n",
+    "myCmd = os.popen('pwd').read()\n",
+    "print(myCmd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "command8 = './plotting.sh'\n",
     "os.system(command8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 88K\n",
+      "-rw-r--r--. 1 main main 25K Aug  4 21:50 hist_mYY_pt.png\n",
+      "-rw-r--r--. 1 main main 22K Aug  4 21:53 hist_mYY_win.png\n",
+      "-rw-r--r--. 1 main main 23K Aug  4 21:53 hist_mYY_incl.png\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "myCmd = os.popen('ls -lhrt histograms/').read()\n",
+    "print(myCmd)"
    ]
   },
   {
@@ -540,11 +634,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sun Aug  4 21:53:32 UTC 2019\n",
+      "\n",
+      "Analysis finished in 2 min 43 s\n"
+     ]
+    }
+   ],
    "source": [
     "myCmd = os.popen('date').read()\n",
     "print(myCmd)\n",
@@ -563,19 +667,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<CENTER><img src=\"http://localhost:8888/files/demos-framework-software-notebooks/images/hist_mYY_incl.png\"></CENTER>\n",
-    "\n",
-    "<CENTER><img src=\"http://localhost:8888/files/demos-framework-software-notebooks/images/hist_mYY_win.png\"></CENTER>"
+    "<CENTER><img src=\"python-13tev/atlas-outreach-cpp-framework-13tev/Beta/Plotting_Hyy/histograms/hist_mYY_incl.png\"></CENTER>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -594,7 +687,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
