new replace welcome.sh

--- a/get-running-13-tev-python-code.ipynb
+++ b/get-running-13-tev-python-code.ipynb
@@ -33,7 +33,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import datetime"
+    "import time"
    ]
   },
   {
@@ -55,7 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sun Aug  4 21:50:49 UTC 2019\n",
+      "Mon Aug 12 13:48:28 CEST 2019\n",
       "\n"
      ]
     }
@@ -63,7 +63,7 @@
    "source": [
     "myCmd = os.popen('date').read()\n",
     "print(myCmd)\n",
-    "starttime = datetime.datetime.now()"
+    "start = time.time()"
    ]
   },
   {
@@ -121,11 +121,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 120K\n",
-      "-rw-r--r--. 1 main main  12K Aug  3 10:00 nbviewer-get-running-13-tev-python.ipynb\n",
-      "-rw-r--r--. 1 main main  72K Aug  3 10:00 ATLAS_OpenData_01-python_Hyy_channel_analysis_example.ipynb\n",
-      "-rw-r--r--. 1 main main  14K Aug  4 21:49 get-running-13-tev-python-code.ipynb\n",
-      "drwxr-xr-x. 2 main main 4.0K Aug  4 21:50 python-13tev\n",
+      "total 124K\n",
+      "-rw-r--r-- 1 summerstudent users  125 Jul 22 11:07 README.md\n",
+      "-rw------- 1 summerstudent users 9.6K Jul 22 11:26 get-running-8-tev-code-cpp.ipynb\n",
+      "-rw-r--r-- 1 summerstudent users  64K Jul 22 11:50 get-running-13-tev-cpp-code.ipynb\n",
+      "-rw-r--r-- 1 summerstudent users  18K Jul 31 20:36 get-running-8-tev-code-python.ipynb\n",
+      "drwxr-xr-x 2 summerstudent users 4.0K Jul 31 22:37 images\n",
+      "-rw-r--r-- 1 summerstudent users  14K Aug 12 13:48 get-running-13-tev-python-code.ipynb\n",
+      "drwxr-xr-x 2 summerstudent users 4.0K Aug 12 13:48 python-13tev\n",
       "\n"
      ]
     }
@@ -154,7 +157,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/main/notebooks/notebooks/atlas\n",
+      "/home/student/demos-framework-software-notebooks\n",
       "\n"
      ]
     }
@@ -200,7 +203,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/main/notebooks/notebooks/atlas/python-13tev\n",
+      "/home/student/demos-framework-software-notebooks/python-13tev\n",
       "\n"
      ]
     }
@@ -276,7 +279,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/main/notebooks/notebooks/atlas/python-13tev/atlas-outreach-cpp-framework-13tev/Beta\n",
+      "/home/student/demos-framework-software-notebooks/python-13tev/atlas-outreach-cpp-framework-13tev/Beta\n",
       "\n"
      ]
     }
@@ -297,7 +300,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sun Aug  4 21:50:52 UTC 2019\n",
+      "Mon Aug 12 13:48:29 CEST 2019\n",
       "\n"
      ]
     }
@@ -379,7 +382,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/main/notebooks/notebooks/atlas/python-13tev/atlas-outreach-cpp-framework-13tev/Beta\n",
+      "/home/student/demos-framework-software-notebooks/python-13tev/atlas-outreach-cpp-framework-13tev/Beta\n",
       "\n"
      ]
     }
@@ -416,8 +419,9 @@
     }
    ],
    "source": [
-    "command6 = 'mkdir Analysis/HyyAnalysis/Output_HyyAnalysis' \n",
-    "os.system(command6)"
+    "command6a = 'mkdir -p Analysis/HyyAnalysis/Output_HyyAnalysis' \n",
+    "command6b = 'rm -rf Analysis/HyyAnalysis/Output_HyyAnalysis/*'\n",
+    "os.system(command6a + ';' + command6b)"
    ]
   },
   {
@@ -431,7 +435,7 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -449,7 +453,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/main/notebooks/notebooks/atlas/python-13tev/atlas-outreach-cpp-framework-13tev/Beta/Analysis/HyyAnalysis\n",
+      "/home/student/demos-framework-software-notebooks/python-13tev/atlas-outreach-cpp-framework-13tev/Beta/Analysis/HyyAnalysis\n",
       "\n"
      ]
     }
@@ -470,15 +474,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 76K\n",
-      "-rwxr-xr-x. 1 main main  347 Aug  4 21:50 run.sh\n",
-      "-rwxr-xr-x. 1 main main  271 Aug  4 21:50 run0.sh\n",
-      "-rw-r--r--. 1 main main 1.4K Aug  4 21:50 main_HyyAnalysis.C\n",
-      "-rw-r--r--. 1 main main 1.5K Aug  4 21:50 HyyAnalysisHistograms.h\n",
-      "-rw-r--r--. 1 main main  16K Aug  4 21:50 HyyAnalysis.h\n",
-      "-rw-r--r--. 1 main main 5.9K Aug  4 21:50 HyyAnalysis.C\n",
-      "lrwxrwxrwx. 1 main main   11 Aug  4 21:50 clean.sh -> ../clean.sh\n",
-      "drwxr-xr-x. 2 main main 4.0K Aug  4 21:50 Output_HyyAnalysis\n",
+      "total 44K\n",
+      "-rwxr-xr-x 1 summerstudent users  347 Aug 12 13:48 run.sh\n",
+      "-rwxr-xr-x 1 summerstudent users  271 Aug 12 13:48 run0.sh\n",
+      "-rw-r--r-- 1 summerstudent users 1.4K Aug 12 13:48 main_HyyAnalysis.C\n",
+      "-rw-r--r-- 1 summerstudent users 1.5K Aug 12 13:48 HyyAnalysisHistograms.h\n",
+      "-rw-r--r-- 1 summerstudent users  16K Aug 12 13:48 HyyAnalysis.h\n",
+      "-rw-r--r-- 1 summerstudent users 5.9K Aug 12 13:48 HyyAnalysis.C\n",
+      "lrwxrwxrwx 1 summerstudent users   11 Aug 12 13:48 clean.sh -> ../clean.sh\n",
+      "drwxr-xr-x 2 summerstudent users 4.0K Aug 12 13:48 Output_HyyAnalysis\n",
       "\n"
      ]
     }
@@ -529,7 +533,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sun Aug  4 21:53:27 UTC 2019\n",
+      "Mon Aug 12 13:48:29 CEST 2019\n",
       "\n"
      ]
     }
@@ -568,7 +572,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/main/notebooks/notebooks/atlas/python-13tev/atlas-outreach-cpp-framework-13tev/Beta/Plotting_Hyy\n",
+      "/home/student/demos-framework-software-notebooks/python-13tev/atlas-outreach-cpp-framework-13tev/Beta/Plotting_Hyy\n",
       "\n"
      ]
     }
@@ -588,7 +592,7 @@
     {
      "data": {
       "text/plain": [
-       "0"
+       "32512"
       ]
      },
      "execution_count": 25,
@@ -612,10 +616,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 88K\n",
-      "-rw-r--r--. 1 main main 25K Aug  4 21:50 hist_mYY_pt.png\n",
-      "-rw-r--r--. 1 main main 22K Aug  4 21:53 hist_mYY_win.png\n",
-      "-rw-r--r--. 1 main main 23K Aug  4 21:53 hist_mYY_incl.png\n",
+      "total 80K\n",
+      "-rw-r--r-- 1 summerstudent users 26K Aug 12 13:48 hist_mYY_win.png\n",
+      "-rw-r--r-- 1 summerstudent users 25K Aug 12 13:48 hist_mYY_pt.png\n",
+      "-rw-r--r-- 1 summerstudent users 23K Aug 12 13:48 hist_mYY_incl.png\n",
       "\n"
      ]
     }
@@ -633,30 +637,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sun Aug  4 21:53:32 UTC 2019\n",
-      "\n",
-      "Analysis finished in 2 min 43 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "myCmd = os.popen('date').read()\n",
-    "print(myCmd)\n",
-    "endtime = datetime.datetime.now()\n",
-    "print(\"Analysis finished in {} min {} s\").format(((endtime - starttime).seconds)/60,((endtime - starttime).seconds)%60)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -668,6 +648,31 @@
    "metadata": {},
    "source": [
     "<CENTER><img src=\"python-13tev/atlas-outreach-cpp-framework-13tev/Beta/Plotting_Hyy/histograms/hist_mYY_incl.png\"></CENTER>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mon Aug 12 13:48:29 CEST 2019\n",
+      "\n",
+      "Finished in 0 min 0 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "myCmd = os.popen('date').read()\n",
+    "print(myCmd)\n",
+    "end = time.time()\n",
+    "duration = end-start\n",
+    "print(\"Finished in {} min {} s\").format(int(duration//60),int(duration%60))"
    ]
   }
  ],
@@ -687,7 +692,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
