--- a/get-running-13-tev-python-code.ipynb
+++ b/get-running-13-tev-python-code.ipynb
@@ -55,7 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mon Aug 12 13:48:28 CEST 2019\n",
+      "Mon Aug 12 18:18:05 CEST 2019\n",
       "\n"
      ]
     }
@@ -70,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Get the code the 13Tev dataset for Hyy analysis"
+    "## 1. Get Hyy analysis code of 13Tev dataset  "
    ]
   },
   {
@@ -121,14 +121,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 124K\n",
+      "total 72K\n",
       "-rw-r--r-- 1 summerstudent users  125 Jul 22 11:07 README.md\n",
       "-rw------- 1 summerstudent users 9.6K Jul 22 11:26 get-running-8-tev-code-cpp.ipynb\n",
-      "-rw-r--r-- 1 summerstudent users  64K Jul 22 11:50 get-running-13-tev-cpp-code.ipynb\n",
       "-rw-r--r-- 1 summerstudent users  18K Jul 31 20:36 get-running-8-tev-code-python.ipynb\n",
       "drwxr-xr-x 2 summerstudent users 4.0K Jul 31 22:37 images\n",
-      "-rw-r--r-- 1 summerstudent users  14K Aug 12 13:48 get-running-13-tev-python-code.ipynb\n",
-      "drwxr-xr-x 2 summerstudent users 4.0K Aug 12 13:48 python-13tev\n",
+      "-rw-r--r-- 1 summerstudent users  14K Aug 12 17:38 get-running-13-tev-python-code.ipynb\n",
+      "-rw-r--r-- 1 summerstudent users  11K Aug 12 18:17 get-running-13-tev-cpp-code.ipynb\n",
+      "drwxr-xr-x 2 summerstudent users 4.0K Aug 12 18:18 python-13tev\n",
       "\n"
      ]
     }
@@ -300,7 +300,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mon Aug 12 13:48:29 CEST 2019\n",
+      "Mon Aug 12 18:18:06 CEST 2019\n",
       "\n"
      ]
     }
@@ -428,7 +428,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Change to the analysis code"
+    "Change to the analysis code path"
    ]
   },
   {
@@ -475,14 +475,14 @@
      "output_type": "stream",
      "text": [
       "total 44K\n",
-      "-rwxr-xr-x 1 summerstudent users  347 Aug 12 13:48 run.sh\n",
-      "-rwxr-xr-x 1 summerstudent users  271 Aug 12 13:48 run0.sh\n",
-      "-rw-r--r-- 1 summerstudent users 1.4K Aug 12 13:48 main_HyyAnalysis.C\n",
-      "-rw-r--r-- 1 summerstudent users 1.5K Aug 12 13:48 HyyAnalysisHistograms.h\n",
-      "-rw-r--r-- 1 summerstudent users  16K Aug 12 13:48 HyyAnalysis.h\n",
-      "-rw-r--r-- 1 summerstudent users 5.9K Aug 12 13:48 HyyAnalysis.C\n",
-      "lrwxrwxrwx 1 summerstudent users   11 Aug 12 13:48 clean.sh -> ../clean.sh\n",
-      "drwxr-xr-x 2 summerstudent users 4.0K Aug 12 13:48 Output_HyyAnalysis\n",
+      "-rwxr-xr-x 1 summerstudent users  347 Aug 12 18:18 run.sh\n",
+      "-rwxr-xr-x 1 summerstudent users  271 Aug 12 18:18 run0.sh\n",
+      "-rw-r--r-- 1 summerstudent users 1.4K Aug 12 18:18 main_HyyAnalysis.C\n",
+      "-rw-r--r-- 1 summerstudent users 1.5K Aug 12 18:18 HyyAnalysisHistograms.h\n",
+      "-rw-r--r-- 1 summerstudent users  16K Aug 12 18:18 HyyAnalysis.h\n",
+      "-rw-r--r-- 1 summerstudent users 5.9K Aug 12 18:18 HyyAnalysis.C\n",
+      "lrwxrwxrwx 1 summerstudent users   11 Aug 12 18:18 clean.sh -> ../clean.sh\n",
+      "drwxr-xr-x 2 summerstudent users 4.0K Aug 12 18:18 Output_HyyAnalysis\n",
       "\n"
      ]
     }
@@ -533,7 +533,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mon Aug 12 13:48:29 CEST 2019\n",
+      "Mon Aug 12 18:22:02 CEST 2019\n",
       "\n"
      ]
     }
@@ -592,7 +592,7 @@
     {
      "data": {
       "text/plain": [
-       "32512"
+       "0"
       ]
      },
      "execution_count": 25,
@@ -617,9 +617,9 @@
      "output_type": "stream",
      "text": [
       "total 80K\n",
-      "-rw-r--r-- 1 summerstudent users 26K Aug 12 13:48 hist_mYY_win.png\n",
-      "-rw-r--r-- 1 summerstudent users 25K Aug 12 13:48 hist_mYY_pt.png\n",
-      "-rw-r--r-- 1 summerstudent users 23K Aug 12 13:48 hist_mYY_incl.png\n",
+      "-rw-r--r-- 1 summerstudent users 25K Aug 12 18:18 hist_mYY_pt.png\n",
+      "-rw-r--r-- 1 summerstudent users 23K Aug 12 18:22 hist_mYY_incl.png\n",
+      "-rw-r--r-- 1 summerstudent users 26K Aug 12 18:22 hist_mYY_win.png\n",
       "\n"
      ]
     }
@@ -661,9 +661,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mon Aug 12 13:48:29 CEST 2019\n",
+      "Mon Aug 12 18:22:12 CEST 2019\n",
       "\n",
-      "Finished in 0 min 0 s\n"
+      "Finished in 4 min 7 s\n"
      ]
     }
    ],
